--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,15 @@
-<div class="row">
+<div class="row" *ngIf="!isLoader">
     <div class="col-12" *ngFor="let post of postData">
         <div class="mb-4 pb-4 border-bottom">
             <h5 class="card-title mb-2">{{ post.title }}</h5>
             <p class="card-text mb-1">{{ post.body }}</p>
             <a href="#" class="card-link">Comments</a>
         </div>
+    </div>
+</div>
+
+<div class="row" *ngIf="isLoader">
+    <div class="col-12">
+        <app-loader></app-loader>
     </div>
 </div>
