--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,4 +1,4 @@
-<ol class="list-group list-group-numbered">
+<ol class="list-group list-group-numbered" *ngIf="!isLoader">
     <li class="list-group-item d-flex justify-content-between align-items-center py-3 task-{{ task.id }}" *ngFor="let task of todoData">
         <div class="ms-2 me-auto">
             <p class="m-0">{{ task.title }}</p>
@@ -8,3 +8,9 @@
         <!-- <i class="fas fa-times-circle"></i> -->
     </li>
 </ol>
+
+<div class="row" *ngIf="isLoader">
+    <div class="col-12">
+        <app-loader></app-loader>
+    </div>
+</div>
